# RGB_IR_FUSION_ROS

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/lightglue/: light_glue.h  read_config.h  super_point.h  utils.h
include/ros_yolo/: detector.h  yolo_node.h  yolo_utils.h  yolov8_decode.h
launch/: yolo_topic.launch
src/: detector.cpp  light_glue.cpp  main.cpp  super_point.cpp  utils.cpp  yolo_node copy.cpp  yolo_node.cpp  yolov8_decode.cpp
tests/: test_detector_postprocess.cpp  test_read_config.cpp  test_yolov8_decode.cpp
